# GeekZip

./: .gitignore  Cargo.toml  README.md  SPEC.md  UI_STYLE_GUIDE.md  dist
.github/workflows/: release.yml
crates/geekzip-cli/: Cargo.toml
crates/geekzip-cli/src/: main.rs
crates/geekzip-core/: Cargo.toml
crates/geekzip-core/src/: lib.rs
crates/geekzip-core/src/compress/: mod.rs
crates/geekzip-core/src/extract/: mod.rs
crates/geekzip-core/src/filename/: mod.rs
crates/geekzip-core/src/format/: mod.rs
crates/geekzip-core/src/integration/: mod.rs
crates/geekzip-core/src/password/: mod.rs
crates/geekzip-core/src/recursive/: mod.rs
crates/geekzip-core/src/safety/: mod.rs
crates/geekzip-core/src/task/: mod.rs
crates/geekzip-core/src/volume/: mod.rs
crates/geekzip-egui/: Cargo.toml
crates/geekzip-egui/src/: main.rs
crates/geekzip-gpui/: Cargo.toml  README.md
crates/geekzip-gpui/assets/icons/: GeekZip.icns
crates/geekzip-gpui/src/: main.rs
geekzip-frontend/: index.html  package-lock.json  package.json  vite.config.ts
geekzip-frontend/src/: index.css
geekzip-frontend/src/components/: Dashboard.tsx  DropZone.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TaskList.tsx
geekzip-frontend/src/hooks/: useExtract.ts
geekzip-frontend/src/pages/: CompressPage.tsx  ExtractPage.tsx  ToolPages.tsx
geekzip-frontend/src/stores/: appStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  settings.rs  stats.rs
