[package]
name = "geekzip-core"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
infer = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
notify = { workspace = true }

zip = { version = "2", features = ["aes-crypto"] }
flate2 = "1"
tar = "0.4"
bzip2 = "0.5"
xz2 = "0.1"
zstd = "0.13"
lz4_flex = "0.11"
sevenz-rust = "0.6"
unicase = "2"
regex = "1"
