[package]
name = "geekzip-egui"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "geekzip-egui"
path = "src/main.rs"

[dependencies]
geekzip-core = { path = "../geekzip-core" }
eframe = "0.31"
egui = "0.31"
egui-wgpu = "0.31"
rfd = "0.15"
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = "0.4"
